--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>de.marcely.bedwars</groupId>
       <artifactId>API</artifactId>
-      <version>5.5.6-Beta4</version>
+      <version>5.5.6</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
